# chat_client

./: CMakeLists.txt  README.md  main.cpp  resource.qrc
Inc/: FriendListWindow.h  addfriendwindow.h  chatdatabase.h  login_in.h  mainwindow.h  messagebubble.h  networkmanager.h  personalmsgwindow.h  registerwindow.h  sockethandler.h
Src/: FriendListWindow.cpp  addfriendwindow.cpp  chatdatabase.cpp  login_in.cpp  mainwindow.cpp  messagebubble.cpp  networkmanager.cpp  personalmsgwindow.cpp  registerwindow.cpp  sockethandler.cpp
